--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -457,133 +457,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.plotly.v1+json": {
-       "data": [
-        {
-         "name": "populations",
-         "text": [
-          "1. Buenos Aires",
-          "2. Toronto",
-          "3. Pyeongchang",
-          "4. Marakesh",
-          "5. Albuquerque",
-          "6. Los Cabos",
-          "7. Greenville",
-          "8. Archipelago Sea",
-          "9. Walla Walla Valley",
-          "10. Salina Island",
-          "11. Solta",
-          "12. Iguazu Falls"
-         ],
-         "type": "bar",
-         "uid": "726a9dbc-1555-11e9-9358-db6bfbeab4a9",
-         "x": [
-          "1. Buenos Aires",
-          "2. Toronto",
-          "3. Pyeongchang",
-          "4. Marakesh",
-          "5. Albuquerque",
-          "6. Los Cabos",
-          "7. Greenville",
-          "8. Archipelago Sea",
-          "9. Walla Walla Valley",
-          "10. Salina Island",
-          "11. Solta",
-          "12. Iguazu Falls"
-         ],
-         "y": [
-          2891000,
-          2800000,
-          2581000,
-          928850,
-          559277,
-          287651,
-          84554,
-          60000,
-          32237,
-          4000,
-          1700,
-          0
-         ]
-        },
-        {
-         "name": "areas",
-         "text": [
-          "1. Buenos Aires",
-          "2. Toronto",
-          "3. Pyeongchang",
-          "4. Marakesh",
-          "5. Albuquerque",
-          "6. Los Cabos",
-          "7. Greenville",
-          "8. Archipelago Sea",
-          "9. Walla Walla Valley",
-          "10. Salina Island",
-          "11. Solta",
-          "12. Iguazu Falls"
-         ],
-         "type": "bar",
-         "uid": "726aa1f4-1555-11e9-9358-db6bfbeab4a9",
-         "x": [
-          "1. Buenos Aires",
-          "2. Toronto",
-          "3. Pyeongchang",
-          "4. Marakesh",
-          "5. Albuquerque",
-          "6. Los Cabos",
-          "7. Greenville",
-          "8. Archipelago Sea",
-          "9. Walla Walla Valley",
-          "10. Salina Island",
-          "11. Solta",
-          "12. Iguazu Falls"
-         ],
-         "y": [
-          4758,
-          2731,
-          3194,
-          200,
-          491,
-          3750,
-          68,
-          8300,
-          33,
-          27,
-          59,
-          672
-         ]
-        }
-       ],
-       "layout": {}
-      },
-      "text/html": [
-       "<div id=\"ff769025-1673-4723-813d-caf70f99234b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff769025-1673-4723-813d-caf70f99234b\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"72739f84-1555-11e9-9358-db6bfbeab4a9\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"7273a2ae-1555-11e9-9358-db6bfbeab4a9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<div id=\"ff769025-1673-4723-813d-caf70f99234b\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ff769025-1673-4723-813d-caf70f99234b\", [{\"name\": \"populations\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [2891000, 2800000, 2581000, 928850, 559277, 287651, 84554, 60000, 32237, 4000, 1700, 0], \"type\": \"bar\", \"uid\": \"72739f84-1555-11e9-9358-db6bfbeab4a9\"}, {\"name\": \"areas\", \"text\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"x\": [\"1. Buenos Aires\", \"2. Toronto\", \"3. Pyeongchang\", \"4. Marakesh\", \"5. Albuquerque\", \"6. Los Cabos\", \"7. Greenville\", \"8. Archipelago Sea\", \"9. Walla Walla Valley\", \"10. Salina Island\", \"11. Solta\", \"12. Iguazu Falls\"], \"y\": [4758, 2731, 3194, 200, 491, 3750, 68, 8300, 33, 27, 59, 672], \"type\": \"bar\", \"uid\": \"7273a2ae-1555-11e9-9358-db6bfbeab4a9\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "import plotly\n",
     "plotly.offline.init_notebook_mode(connected=True)\n",
